some more stuff idk

--- a/Themes/Minichrome.css
+++ b/Themes/Minichrome.css
@@ -4,292 +4,82 @@ meta {
     -theme-accent-color: auto;
 }
 
-
-/*
- * Window styles
- */
-/* meta.window {
-    background-color: hsb(210, 10%, 20%);
-    border-color: hsba(0, 0%, 100%, 0.1);
-} 
-meta.titlebar {
-    color: hsb(210, 10%, 80%);
-    background: linear-gradient(hsb(210, 10%, 26%), hsb(210, 10%, 20%));
-    border-color: hsba(0, 0%, 0%, 0.6);
-}
-meta.titlebar.inactive {
-    background-color: hsb(210, 10%, 20%);
-}
-
-meta.button {
-    background: linear-gradient(hsb(210, 10%, 34%), hsb(210, 10%, 26%));
-    border: linear-gradient(hsb(210, 10%, 18%), hsb(210, 10%, 14%));
-    color: white;
-}
-meta.button.highlighted {
-    background: linear-gradient(hsb(210, 10%, 44%), hsb(210, 10%, 36%));
-    color: white;
-}
-meta.button.selected {
-    color: white;
-}
-meta.button.highlighted.selected {
-    color: white;
-}
-meta.button.disabled {
-    background: linear-gradient(hsb(210, 10%, 34%), hsb(210, 10%, 26%));
-    border: linear-gradient(hsb(210, 10%, 18%), hsb(210, 10%, 14%));
-    color: hsb(0, 0%, 40%);
-}
-
-meta.textfield {
-    background-color: hsb(210, 10%, 14%);
-    border-color: hsb(210, 10%, 10%);
-}
-
-meta.accent {
-    color: hsb(204, 78%, 97%);
-}*/
-
-/*
- * Document styles
- */
 meta.document {
     background-color: white;
     color: black;
 }
 
-/* meta.document.button {
-    background: linear-gradient(hsb(210, 10%, 26%), hsb(210, 10%, 22%));
-    border: linear-gradient(hsb(210, 10%, 12%), hsb(210, 10%, 8%));
-}
-meta.document.button.disabled {
-    background: linear-gradient(hsba(220, 10%, 26%, 0.3), hsba(220, 10%, 22%, 0.3));
-}
-meta.document.button.highlighted {
-    background: linear-gradient(hsb(210, 10%, 36%), hsb(210, 10%, 32%));
-}
-
-meta.document.textfield {
-    background-color: hsb(210, 10%, 10%);
-    border-color: hsb(210, 10%, 6%);
-} */
-
-/* Text */
 meta.text {
     color: black;
 }
-meta.text.invisible {
-    color: #666;
-}
-meta.text.selected {
+
+/* TODO: style doc comments differently */
+comment {
+    color: #664;
+    background-color: #ffe;
 }
 
-/* Cursor */
-/* meta.cursor {
-    background-color: hsb(210, 10%, 16%);
+/* TODO: commas separating arguments in functions */
+/* TODO: commas separating selectors in CSS */
+/* TODO: colons in Python */
+/* TODO: colons, semicolons in CSS */
+bracket, operator, keyword, tag, declaration {
+    color: #888;
 }
 
-/* Indentation Guides * /
-meta.indentguide {
-    border-color: hsba(220, 10%, 50%, 0.2);
+tag.name, tag.attribute.name, tag.attribute.value {
+    color: #333;
 }
 
-/* Gutter * /
-meta.gutter {
-    color: hsb(210, 10%, 40%);
+/* TODO: style Python docstrings differently */
+string {
+    color: #333;
+    background-color: #f6f6f6;
 }
-meta.gutter.selected {
-    background-color: hsb(210, 10%, 10%);
-    color: hsb(210, 10%, 80%);
-} */
 
+class.name,
+type.name,
+package.name,
+enum.name,
+union.name,
+struct.name,
+property.name,
+function.name,
+method.name,
+variable.name,
+constant.name,
+style.selector {
+    font-weight: bold;
+}
 
 /*
- * Syntax styles
- */
+class.name {
+    background-color: hsb(320, 20%, 100%);
+}
 
-/* keyword {
-    color: hsb(210, 60%, 100%);
+class.name.css {
+    background-color: none;
 }
-comment {
-    color: hsb(210, 20%, 50%);
-}
-processing {
-    color: hsb(210, 20%, 50%);
-}
-declaration {
-    color: hsb(210, 20%, 50%);
-}
-bracket {
-    color: hsb(210, 20%, 52%);
-}
-operator {
-    color: hsb(210, 20%, 52%);
-}
-invalid {
-    background-color: hsb(355, 82%, 96%);
-    color: hsb(60, 3%, 97%);
-}
-link {
-    color: hsb(210, 60%, 100%);
 
-} */
-
-/* Values */
-/* value.boolean {
-    color: hsb(210, 60%, 100%);
+function.name, method.name {
+    background-color: hsb(120, 20%, 100%);
 }
-value.null {
-    color: hsb(210, 60%, 100%);
-}
-value.number {
-    color: hsb(210, 60%, 100%);
-}
-value.entity {
-    color: hsb(210, 60%, 100%);
-}
-value.symbol {
-    color: hsb(210, 60%, 100%);
-} */
-
-/* Identifiers */
-/* identifier.type {
-    color: hsb(258, 40%, 87%);
-}
-identifier.constant {
-}
-identifier.global, identifier.variable {
-    color: hsb(268, 34%, 100%);
-}
-identifier.property,
-identifier.decorator,
-identifier.function,
-identifier.method {
-    color: hsb(166, 40%, 78%);
-}
-identifier.key {
-    color: hsb(210, 60%, 100%);
-}
-identifier.argument {
-    color: hsb(268, 34%, 100%);
-} */
-
-/* Strings */
-/* string {
-    color: hsb(5, 65%, 100%);
-}
-string.key {
-    color: hsb(5, 65%, 100%);
-}
-string-template {
-    color: hsb(27, 60%, 100%);
-}
-string-template.value {
-    color: hsb(27, 72%, 100%);
-}
-regex {
-    color: hsb(40, 72%, 100%);
-}
-regex.escaped {
-    color: hsb(27, 72%, 99%);
-}
-cdata {
-    color: hsb(210, 60%, 100%);
-} */
-
+*/
 /* Markup */
-/* markup.heading {
-    color: hsb(30, 50%, 80%);
-}
-markup.line {
-    color: hsb(60, 50%, 75%);
-}
-markup.bold {
-    color: hsb(196, 60%, 76%);
+
+markup.heading {
     font-weight: bold;
 }
+
+markup.bold {
+    font-weight: bold;
+}
+
 markup.italic {
-    color: hsb(94, 40%, 80%);
     font-style: italic;
 }
-markup.strikethrough {
-    color: hsb(0, 60%, 100%);
-}
-markup.list.item {
-    color: hsb(30, 50%, 80%);
-}
-markup.code {
-    background-color: rgba(128, 128, 128, 0.2);
-} */
 
-/* Types */
-/* definition.class class.name,
-definition.type type.name,
-definition.package package.name,
-definition.enum enum.name,
-definition.union union.name,
-definition.struct struct.name {
-    font-weight: bold;
-    color: hsb(258, 40%, 87%);
-} */
-
-/* Members */
-/* definition.property property.name,
-definition.function function.name,
-definition.method method.name {
-    color: hsb(210, 10%, 100%);
-} */
-
-/* Tags */
-/* tag {
-    color: hsb(166, 40%, 78%);
+markup.link, tag.attribute.value.link {
+    color: blue;
+    text-decoration: underline;
 }
-tag.framework {
-    color: hsb(258, 40%, 87%);
-}
-tag.attribute.name {
-    color: hsb(95, 54%, 82%);
-}
-tag.attribute.value {
-    color: hsb(5, 62%, 100%);
-}
-tag.attribute.value.link {
-    color: hsb(210, 60%, 100%);
-} */
-
-/* Styles */
-/* style.at {
-    color: hsb(25, 75%, 100%);
-    font-weight: bold;
-}
-style.selector.element {
-    font-weight: bold;
-}
-style.selector.identifier.id {
-    color: hsb(166, 40%, 78%);
-}
-style.selector.identifier.class {
-    color: hsb(258, 40%, 87%);
-}
-style.selector.pseudoclass {
-    color: hsb(258, 40%, 87%);
-}
-style.selector.pseudoelement {
-    color: hsb(166, 40%, 78%);
-}
-style.attribute.name {
-    color: hsb(148, 35%, 70%);
-}
-style.value.number {
-    color: hsb(249, 45%, 96%);
-}
-style.value.color.hex {
-    color: hsb(249, 45%, 96%);
-}
-style.value.keyword {
-    color: hsb(210, 60%, 100%);
-}
-style.value.color.named {
-    color: hsb(210, 60%, 100%);
-} */
